# rust-ray-tracer-challenge

./: .gitignore  Cargo.toml  README.md
examples/: projectile.rs
examples/circle/: main.rs
examples/clock/: clock.ppm  main.rs
examples/projectile/: main.rs  projectile.ppm
src/: canvas.rs  color.rs  float_comparison.rs  intersection.rs  lib.rs  light.rs  material.rs  ray.rs  sphere.rs  tuple.rs
