[package]
name = "rust-ray-tracer-challenge"
version = "0.1.0"
edition = "2021"
authors = ["Janusz Piechówka"]
repository = "https://github.com/jpiechowka/rust-ray-tracer-challenge"
license = "MIT OR Apache-2.0"
description = "Rust ray tracer implementation, based on The Ray Tracer Challenge book by Jamis Buck"
readme = "README.md"

[lib]
name = "raytracer"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

[dependencies]
approx = "0.5.1"
env_logger = "0.11.1"
glam = { version = "0.25.0", features = ["debug-glam-assert"] }
image = "0.24.7"
indicatif = { version = "0.17.6", features = ["rayon"] }
log = "0.4.20"
rand = "0.8.5"
rayon = "1.7.0"

[dev-dependencies]
rstest = "0.18.2"
